infra/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: api
          image: kumojin.azurecr.io/demo:1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "1000m"
