infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  ports:
    - name: http
      targetPort: 3000
      port: 80
  selector:
    app: demo
