infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: demo.dev.kumojin.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo
                port:
                  number: 80
  tls:
    - hosts:
        - demo.dev.kumojin.com
      secretName: demo-dev-kumojin-com-tls
